@@ -42,6 +42,7 @@ o wake up the daemon iff there are real events to handle instead of polling
 o add support for tagged vlan interfaces in the config file, e.g. eth0.1
 o improve alarm framework based on suggestions from Max Kellerman
 o constify queue_iterate()
+o use timeradd() since manipulating tv_sec directly
 
 Max Kellermann <max@duempel.org>:
 
